--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -11,6 +11,17 @@
 
 			<div class="bd">
 				<div class="entry-content">
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-3038637209475832";
+/* Wide Ad */
+google_ad_slot = "6409428950";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 					{{ content }}
 					<div class="meta">
 						<p class="date-publish">
