--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -50,7 +50,9 @@ try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document
 					<div class="social">
 						<ul class="list-linear">
 							<li><div class="twitter-tweet"><a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="{{ site.author.twitter }}" data-lang="en">Tweet</a></div></li>
+							
 							<li><div class="twitter-follow"><a href="https://twitter.com/{{ site.author.twitter }}" class="twitter-follow-button" data-show-count="false" data-lang="en"></a></div></li>
+							<li><div class="g-plusone" data-size="tall" data-annotation="inline" data-width="300"></div></li>
 						</ul>
 					</div>
 					
