--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -25,6 +25,8 @@ try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document
 <!--<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=2265126&afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-banner.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="11" height="60" border="0" /></a>--></span>
 <!-- End: adBrite -->
 					{{ content }}
+					
+					<a href="http://sendy.co/?ref=Rou6F" title=""><img src="http://static.sendy.co/468x60_var1.jpg" alt="Check out Sendy, a self hosted newsletter web app that lets you send emails 100x cheaper via Amazon SES."/></a>
 					<div class="meta">
 						<p class="date-publish">
 							Published: 
