--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -11,19 +11,17 @@
 
 			<div class="bd">
 				<div class="entry-content">
-								<!-- Begin: adBrite, Generated: 2012-12-26 23:33:11  -->
-<script type="text/javascript">
-var AdBrite_Title_Color = '0000FF';
-var AdBrite_Text_Color = '000000';
-var AdBrite_Background_Color = 'FFFFFF';
-var AdBrite_Border_Color = 'CCCCCC';
-var AdBrite_URL_Color = '008000';
-var AdBrite_Page_Url = '';
-try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
+							<script type="text/javascript"><!--
+google_ad_client = "ca-pub-3038637209475832";
+/* Social India Small footer */
+google_ad_slot = "3145966558";
+google_ad_width = 320;
+google_ad_height = 50;
+//-->
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=2265126&zs=3436385f3630&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'&purl='+encodeURIComponent(AdBrite_Page_Url)+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script>
-<!--<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=2265126&afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-banner.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="11" height="60" border="0" /></a>--></span>
-<!-- End: adBrite -->
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 					{{ content }}
 					
 
